Changed Pricing Button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12843,46 +12843,6 @@ a.bd-backtotop-1:hover {
   color: #858585;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24xNA {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24xNQ {}
-.bd-linkbutton-15 {
-  margin-top: 18px;
-  margin-bottom: 18px;
-}
-.bd-button-40 a {
-  line-height: 20.00000001px;
-  font-size: 14px;
-}
-.bd-button-40 {
-  /* default transparent bg otherwise you get gray default bg */
-  background-color: transparent;
-}
-.bd-button-40,
-.bd-button-40:link,
-.bd-button-40:visited {
-  /* reset browser styles */
-  border-width: 0;
-  padding: 0;
-  color: #ffffff;
-  background-color: #57d175;
-  vertical-align: middle;
-  display: inline-block;
-  text-align: center;
-  width: 80%;
-  padding: 5px 15px;
-  background-image: none;
-}
-.bd-button-40:hover,
-.bd-button-40:focus {
-  background-color: #57d175;
-  text-decoration: none;
-  color: #ffffff;
-  background-image: none;
-}
-.bd-button-40:active {
-  background-color: #858585;
-  background-image: none;
-}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24xNQ {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24xNg {}
 .bd-button-41 a {
   line-height: 20.00000001px;
@@ -12933,46 +12893,6 @@ a.bd-backtotop-1:hover {
   color: #858585;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24xNg {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24xOA {}
-.bd-linkbutton-18 {
-  margin-top: 18px;
-  margin-bottom: 18px;
-}
-.bd-button-46 a {
-  line-height: 20.00000001px;
-  font-size: 14px;
-}
-.bd-button-46 {
-  /* default transparent bg otherwise you get gray default bg */
-  background-color: transparent;
-}
-.bd-button-46,
-.bd-button-46:link,
-.bd-button-46:visited {
-  /* reset browser styles */
-  border-width: 0;
-  padding: 0;
-  color: #ffffff;
-  background-color: #57d175;
-  vertical-align: middle;
-  display: inline-block;
-  text-align: center;
-  width: 80%;
-  padding: 5px 15px;
-  background-image: none;
-}
-.bd-button-46:hover,
-.bd-button-46:focus {
-  background-color: #57d175;
-  text-decoration: none;
-  color: #ffffff;
-  background-image: none;
-}
-.bd-button-46:active {
-  background-color: #858585;
-  background-image: none;
-}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24xOA {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24y {}
 .bd-linkbutton-2 {
   margin-top: 0px;
@@ -13023,46 +12943,6 @@ a.bd-backtotop-1:hover {
   color: #858585;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24y {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24yMA {}
-.bd-linkbutton-20 {
-  margin-top: 18px;
-  margin-bottom: 18px;
-}
-.bd-button-52 a {
-  line-height: 20.00000001px;
-  font-size: 14px;
-}
-.bd-button-52 {
-  /* default transparent bg otherwise you get gray default bg */
-  background-color: transparent;
-}
-.bd-button-52,
-.bd-button-52:link,
-.bd-button-52:visited {
-  /* reset browser styles */
-  border-width: 0;
-  padding: 0;
-  color: #ffffff;
-  background-color: #57d175;
-  vertical-align: middle;
-  display: inline-block;
-  text-align: center;
-  width: 80%;
-  padding: 5px 15px;
-  background-image: none;
-}
-.bd-button-52:hover,
-.bd-button-52:focus {
-  background-color: #57d175;
-  text-decoration: none;
-  color: #ffffff;
-  background-image: none;
-}
-.bd-button-52:active {
-  background-color: #858585;
-  background-image: none;
-}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24yMA {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24yMQ {}
 .bd-linkbutton-21 {
   float: right;
@@ -13418,6 +13298,135 @@ a.bd-backtotop-1:hover {
   background-image: none;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24zMw {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24zNQ {}
+.bd-linkbutton-35 {
+  margin-top: 18px;
+  margin-bottom: 18px;
+}
+.bd-button-58 a {
+  line-height: 20.00000001px;
+  font-size: 14px;
+}
+.bd-button-58 {
+  /* default transparent bg otherwise you get gray default bg */
+  background-color: transparent;
+}
+.bd-button-58,
+.bd-button-58:link,
+.bd-button-58:visited {
+  /* reset browser styles */
+  border-width: 0;
+  padding: 0;
+  color: #ffffff;
+  background-color: #57d175;
+  vertical-align: middle;
+  display: inline-block;
+  text-align: center;
+  width: 80%;
+  padding: 5px 15px;
+  background-image: none;
+}
+.bd-button-58:hover,
+.bd-button-58:focus {
+  background-color: #ffffff;
+  text-decoration: none;
+  color: #57d175;
+  margin-top: 17px;
+  margin-bottom: 17px;
+  border: 1px solid #57d175;
+  background-image: none;
+}
+.bd-button-58:active {
+  background-color: #858585;
+  background-image: none;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24zNQ {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24zNg {}
+.bd-linkbutton-36 {
+  margin-top: 18px;
+  margin-bottom: 18px;
+}
+.bd-button-59 a {
+  line-height: 20.00000001px;
+  font-size: 14px;
+}
+.bd-button-59 {
+  /* default transparent bg otherwise you get gray default bg */
+  background-color: transparent;
+}
+.bd-button-59,
+.bd-button-59:link,
+.bd-button-59:visited {
+  /* reset browser styles */
+  border-width: 0;
+  padding: 0;
+  color: #ffffff;
+  background-color: #57d175;
+  vertical-align: middle;
+  display: inline-block;
+  text-align: center;
+  width: 80%;
+  padding: 5px 15px;
+  background-image: none;
+}
+.bd-button-59:hover,
+.bd-button-59:focus {
+  background-color: #ffffff;
+  text-decoration: none;
+  color: #57d175;
+  margin-top: 17px;
+  margin-bottom: 17px;
+  border: 1px solid #57d175;
+  background-image: none;
+}
+.bd-button-59:active {
+  background-color: #858585;
+  background-image: none;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24zNg {}
+#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24zNw {}
+.bd-linkbutton-37 {
+  margin-top: 18px;
+  margin-bottom: 18px;
+}
+.bd-button-60 a {
+  line-height: 20.00000001px;
+  font-size: 14px;
+}
+.bd-button-60 {
+  /* default transparent bg otherwise you get gray default bg */
+  background-color: transparent;
+}
+.bd-button-60,
+.bd-button-60:link,
+.bd-button-60:visited {
+  /* reset browser styles */
+  border-width: 0;
+  padding: 0;
+  color: #ffffff;
+  background-color: #57d175;
+  vertical-align: middle;
+  display: inline-block;
+  text-align: center;
+  width: 80%;
+  padding: 5px 15px;
+  background-image: none;
+}
+.bd-button-60:hover,
+.bd-button-60:focus {
+  background-color: #ffffff;
+  text-decoration: none;
+  color: #57d175;
+  margin-top: 17px;
+  margin-bottom: 17px;
+  border: 1px solid #57d175;
+  background-image: none;
+}
+.bd-button-60:active {
+  background-color: #858585;
+  background-image: none;
+}
+#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b24zNw {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b241 {}
 .bd-linkbutton-5 {
   width: 100%;
@@ -13507,6 +13516,8 @@ a.bd-backtotop-1:hover {
   background-color: #ffffff;
   text-decoration: none;
   color: #57d175;
+  margin-top: 17px;
+  margin-bottom: 17px;
   border: 1px solid #57d175;
   background-image: none;
 }
