Removed testimonials page and changed contact page button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11197,8 +11197,6 @@ a.bd-backtotop-1:hover {
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50MTQ {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50MTU {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50MTU {}
-#marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50Mg {}
-#marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50Mg {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50NA {}
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50NA {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWh0bWxjb250ZW50NQ {}
@@ -13431,6 +13429,42 @@ a.bd-backtotop-1:hover {
 .bd-linkbutton-5 {
   width: 100%;
   margin-top: 12px;
+}
+.bd-button-61 a {
+  line-height: 20.00000001px;
+  font-size: 14px;
+}
+.bd-button-61 {
+  /* default transparent bg otherwise you get gray default bg */
+  background-color: transparent;
+}
+.bd-button-61,
+.bd-button-61:link,
+.bd-button-61:visited {
+  /* reset browser styles */
+  border-width: 0;
+  padding: 0;
+  color: #ffffff;
+  background-color: #57d175;
+  vertical-align: middle;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 15px;
+  background-image: none;
+}
+.bd-button-61:hover,
+.bd-button-61:focus {
+  background-color: #ffffff;
+  text-decoration: none;
+  color: #57d175;
+  padding-bottom: 4px;
+  padding-top: 4px;
+  border: 1px solid #57d175;
+  background-image: none;
+}
+.bd-button-61:active {
+  background-color: #858585;
+  background-image: none;
 }
 #marker-end-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b241 {}
 #marker-start-L3N0eWxlLmNzcw.L2NvbnRyb2xzL2JkLWxpbmtidXR0b242 {}
