Blog added for testing and log fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9966,25 +9966,25 @@ table:not([class]) tbody > tr:nth-child(odd) > th,
   cursor: pointer;
   /* Safari click events fix */
 }
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23 {
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23 {
   list-style: none;
   position: relative;
 }
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23 > a,
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23 > a:link,
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23 > a:visited {
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23 > a,
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23 > a:link,
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23 > a:visited {
   color: #777777;
   padding: 5px;
   border-radius: 0px;
   display: block;
   white-space: nowrap;
 }
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23 > a:before,
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23 > a:link:before,
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23 > a:visited:before,
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23 > a:after,
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23 > a:link:after,
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23 > a:visited:after {
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23 > a:before,
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23 > a:link:before,
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23 > a:visited:before,
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23 > a:after,
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23 > a:link:after,
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23 > a:visited:after {
   display: inline-block;
   vertical-align: middle;
   text-decoration: none;
@@ -9996,43 +9996,43 @@ table:not([class]) tbody > tr:nth-child(odd) > th,
   opacity: 1;
   font-family: 'Billion Web Font';
 }
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23 > a:focus {
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23 > a:focus {
   outline-width: 0;
 }
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23:not(.active) > a.hover:not(.active),
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23:not(.active) > a:hover:not(.active),
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23:not(.active) > a:focus:not(.active),
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23:hover:not(.active) > a:not(.active) {
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23:not(.active) > a.hover:not(.active),
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23:not(.active) > a:hover:not(.active),
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23:not(.active) > a:focus:not(.active),
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23:hover:not(.active) > a:not(.active) {
   color: #57d175;
   text-decoration: none;
   background-color: #f5f5f5;
   background-image: none;
 }
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23 > a.active,
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23.active > a {
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23 > a.active,
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23.active > a {
   color: #ffffff;
   background-color: #ededed;
   background-image: none;
 }
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23 {
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23 {
   list-style: none;
   position: relative;
 }
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23 > .bd-grid-item > a,
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23 > .bd-grid-item > a:link,
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23 > .bd-grid-item > a:visited {
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23 > .bd-grid-item > a,
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23 > .bd-grid-item > a:link,
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23 > .bd-grid-item > a:visited {
   color: #777777;
   padding: 5px;
   border-radius: 0px;
   display: block;
   white-space: nowrap;
 }
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23 > .bd-grid-item > a:before,
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23 > .bd-grid-item > a:link:before,
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23 > .bd-grid-item > a:visited:before,
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23 > .bd-grid-item > a:after,
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23 > .bd-grid-item > a:link:after,
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23 > .bd-grid-item > a:visited:after {
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23 > .bd-grid-item > a:before,
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23 > .bd-grid-item > a:link:before,
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23 > .bd-grid-item > a:visited:before,
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23 > .bd-grid-item > a:after,
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23 > .bd-grid-item > a:link:after,
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23 > .bd-grid-item > a:visited:after {
   display: inline-block;
   vertical-align: middle;
   text-decoration: none;
@@ -10044,43 +10044,43 @@ table:not([class]) tbody > tr:nth-child(odd) > th,
   opacity: 1;
   font-family: 'Billion Web Font';
 }
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23 > .bd-grid-item > a:focus {
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23 > .bd-grid-item > a:focus {
   outline-width: 0;
 }
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23:not(.active) > .bd-grid-item > a.hover:not(.active),
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23:not(.active) > .bd-grid-item > a:hover:not(.active),
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23:not(.active) > .bd-grid-item > a:focus:not(.active),
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23:hover:not(.active) > .bd-grid-item > a:not(.active) {
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23:not(.active) > .bd-grid-item > a.hover:not(.active),
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23:not(.active) > .bd-grid-item > a:hover:not(.active),
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23:not(.active) > .bd-grid-item > a:focus:not(.active),
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23:hover:not(.active) > .bd-grid-item > a:not(.active) {
   color: #57d175;
   text-decoration: none;
   background-color: #f5f5f5;
   background-image: none;
 }
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23 > .bd-grid-item > a.active,
-.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23.nav-pills .bd-menuitem-23.active > .bd-grid-item > a {
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23 > .bd-grid-item > a.active,
+.bd-toplevel-item:not(.bd-megamenu) .bd-menu-23 .bd-menuitem-23.active > .bd-grid-item > a {
   color: #ffffff;
   background-color: #ededed;
   background-image: none;
 }
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item) {
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item) {
   list-style: none;
   position: relative;
 }
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item) > a,
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item) > a:link,
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item) > a:visited {
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item) > a,
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item) > a:link,
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item) > a:visited {
   color: #777777;
   padding: 5px;
   border-radius: 0px;
   display: block;
   white-space: nowrap;
 }
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item) > a:before,
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item) > a:link:before,
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item) > a:visited:before,
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item) > a:after,
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item) > a:link:after,
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item) > a:visited:after {
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item) > a:before,
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item) > a:link:before,
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item) > a:visited:before,
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item) > a:after,
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item) > a:link:after,
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item) > a:visited:after {
   display: inline-block;
   vertical-align: middle;
   text-decoration: none;
@@ -10092,43 +10092,43 @@ table:not([class]) tbody > tr:nth-child(odd) > th,
   opacity: 1;
   font-family: 'Billion Web Font';
 }
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item) > a:focus {
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item) > a:focus {
   outline-width: 0;
 }
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item):not(.active) > a.hover:not(.active),
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item):not(.active) > a:hover:not(.active),
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item):not(.active) > a:focus:not(.active),
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item):hover:not(.active) > a:not(.active) {
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item):not(.active) > a.hover:not(.active),
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item):not(.active) > a:hover:not(.active),
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item):not(.active) > a:focus:not(.active),
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item):hover:not(.active) > a:not(.active) {
   color: #57d175;
   text-decoration: none;
   background-color: #f5f5f5;
   background-image: none;
 }
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item) > a.active,
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item).active > a {
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item) > a.active,
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item).active > a {
   color: #ffffff;
   background-color: #ededed;
   background-image: none;
 }
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item) {
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item) {
   list-style: none;
   position: relative;
 }
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item) > .bd-grid-item > a,
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item) > .bd-grid-item > a:link,
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item) > .bd-grid-item > a:visited {
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item) > .bd-grid-item > a,
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item) > .bd-grid-item > a:link,
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item) > .bd-grid-item > a:visited {
   color: #777777;
   padding: 5px;
   border-radius: 0px;
   display: block;
   white-space: nowrap;
 }
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item) > .bd-grid-item > a:before,
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item) > .bd-grid-item > a:link:before,
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item) > .bd-grid-item > a:visited:before,
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item) > .bd-grid-item > a:after,
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item) > .bd-grid-item > a:link:after,
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item) > .bd-grid-item > a:visited:after {
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item) > .bd-grid-item > a:before,
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item) > .bd-grid-item > a:link:before,
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item) > .bd-grid-item > a:visited:before,
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item) > .bd-grid-item > a:after,
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item) > .bd-grid-item > a:link:after,
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item) > .bd-grid-item > a:visited:after {
   display: inline-block;
   vertical-align: middle;
   text-decoration: none;
@@ -10140,20 +10140,20 @@ table:not([class]) tbody > tr:nth-child(odd) > th,
   opacity: 1;
   font-family: 'Billion Web Font';
 }
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item) > .bd-grid-item > a:focus {
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item) > .bd-grid-item > a:focus {
   outline-width: 0;
 }
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item):not(.active) > .bd-grid-item > a.hover:not(.active),
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item):not(.active) > .bd-grid-item > a:hover:not(.active),
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item):not(.active) > .bd-grid-item > a:focus:not(.active),
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item):hover:not(.active) > .bd-grid-item > a:not(.active) {
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item):not(.active) > .bd-grid-item > a.hover:not(.active),
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item):not(.active) > .bd-grid-item > a:hover:not(.active),
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item):not(.active) > .bd-grid-item > a:focus:not(.active),
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item):hover:not(.active) > .bd-grid-item > a:not(.active) {
   color: #57d175;
   text-decoration: none;
   background-color: #f5f5f5;
   background-image: none;
 }
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item) > .bd-grid-item > a.active,
-.bd-menu-23.nav-pills .bd-menuitem-23:not(.bd-mega-item).active > .bd-grid-item > a {
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item) > .bd-grid-item > a.active,
+.bd-menu-23 .bd-menuitem-23:not(.bd-mega-item).active > .bd-grid-item > a {
   color: #ffffff;
   background-color: #ededed;
   background-image: none;
